--- a/static/global.css
+++ b/static/global.css
@@ -1,9 +1,18 @@
 body {
+	--black: #393e41;
+	--black-transparent: #393e4140;
+	--white: #f6f7eb;
+	--gray: #F4F5F6;
+	--blue: #20a4f3;
+	--blue-transparent: #20a4f340;
+	--red: #e94f37;
+	--green: #1fea33;
+	background-color: var(--gray);
 	margin: 0;
 	font-family: Roboto, -apple-system, BlinkMacSystemFont, Segoe UI, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 	font-size: 14px;
 	line-height: 1.5;
-	color: #333;
+	color: var(--black);
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -17,7 +26,12 @@ h1 {
 }
 
 a {
-	color: inherit;
+	color: var(--blue);
+	text-decoration: none;
+}
+
+a:hover {
+	text-decoration: underline;
 }
 
 code {
