--- a/static/global.css
+++ b/static/global.css
@@ -1,50 +1,62 @@
 body {
-	--black: #393e41;
-	--black-transparent: #393e4140;
-	--white: #f6f7eb;
-	--gray: #F4F5F6;
-	--blue: #20a4f3;
-	--blue-transparent: #20a4f340;
-	--red: #e94f37;
-	--green: #1fea33;
-	background-color: var(--gray);
-	margin: 0;
-	font-family: Roboto, -apple-system, BlinkMacSystemFont, Segoe UI, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-	font-size: 14px;
-	line-height: 1.5;
-	color: var(--black);
+  --black: #393e41;
+  --black-transparent: #393e4140;
+  --white: #f6f7eb;
+  --gray: #f4f5f6;
+  --blue: #20a4f3;
+  --blue-transparent: #20a4f340;
+  --red: #e94f37;
+  --green: #1fea33;
+  background-color: var(--gray);
+  margin: 0;
+  font-family: Roboto, -apple-system, BlinkMacSystemFont, Segoe UI, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-size: 14px;
+  line-height: 1.5;
+  color: var(--black);
 }
 
-h1, h2, h3, h4, h5, h6 {
-	margin: 0 0 0.5em 0;
-	font-weight: 400;
-	line-height: 1.2;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0 0 0.5em 0;
+  font-weight: 400;
+  line-height: 1.2;
 }
 
 h1 {
-	font-size: 2em;
+  font-size: 2em;
 }
 
 a {
-	color: var(--blue);
-	text-decoration: none;
+  color: var(--blue);
+  text-decoration: none;
 }
 
 a:hover {
-	text-decoration: underline;
+  text-decoration: underline;
+}
+
+small {
+  text-transform: uppercase;
+  font-size: 12px;
+  font-weight: 800;
 }
 
 code {
-	font-family: menlo, inconsolata, monospace;
-	font-size: calc(1em - 2px);
-	color: #555;
-	background-color: #f0f0f0;
-	padding: 0.2em 0.4em;
-	border-radius: 2px;
+  font-family: menlo, inconsolata, monospace;
+  font-size: calc(1em - 2px);
+  color: #555;
+  background-color: #f0f0f0;
+  padding: 0.2em 0.4em;
+  border-radius: 2px;
 }
 
 @media (min-width: 400px) {
-	body {
-		font-size: 16px;
-	}
+  body {
+    font-size: 16px;
+  }
 }
