Added the ability to keep track of time, and score over time, need to add history tracking for overall average

--- a/static/global.css
+++ b/static/global.css
@@ -2,7 +2,7 @@ body {
   --black: #393e41;
   --black-transparent: #393e4140;
   --white: #f6f7eb;
-  --gray: #f4f5f6;
+  --gray: #DDE0E3;
   --blue: #20a4f3;
   --blue-transparent: #20a4f340;
   --red: #e94f37;
