--- a/static/global.css
+++ b/static/global.css
@@ -1,12 +1,17 @@
-body {
+:root {
   --black: #393e41;
   --black-transparent: #393e4140;
   --white: #f6f7eb;
-  --gray: #DDE0E3;
+  --gray: #dde0e3;
   --blue: #20a4f3;
   --blue-transparent: #20a4f340;
   --red: #e94f37;
+  --red-transparent: rgba(233, 79, 55, 0.6);
   --green: #1fea33;
+  --green-transparent: #1fea3340;
+}
+
+body {
   background-color: var(--gray);
   margin: 0;
   font-family: Roboto, -apple-system, BlinkMacSystemFont, Segoe UI, Oxygen,
